1. Developed a Survey Builder LWC: Designed and implemented a Lightning Web Component (LWC) for seamless survey creation, allowing users to define questions, responses, and survey configurations dynamically. 2. Built a Survey Taker Module: Created a robust module to capture and store survey responses efficiently, ensuring data accuracy and integrity. 3. Implemented Version Control: Integrated version control mechanisms to track survey changes and maintain historical data, enabling rollback and comparison of survey iterations.

--- a/force-app/main/default/classes/SurveyVersionModel.cls
+++ b/force-app/main/default/classes/SurveyVersionModel.cls
@@ -1,7 +1,7 @@
 public class SurveyVersionModel {
     public Id id { get; set; }
     public Id surveyId { get; set; }
-    public String versionNumber { get; set; }
+    public Decimal versionNumber { get; set; }
     public String status { get; set; }
     public String body { get; set; }
     public Datetime activatedDate { get; set; }
