Damn who knew a hyphen could be so persistent

--- a/force-app/main/default/classes/SurveyBuilder.cls
+++ b/force-app/main/default/classes/SurveyBuilder.cls
@@ -69,7 +69,7 @@ public class SurveyBuilder {
     public static SurveyResponse__c getSurveyResponse(Id recId){
         try {
             system.debug('recId-'+recId);
-            return [SELECT Id,Survey_Version__r.Body__c,Body__c FROM SurveyResponse__c WHERE Id = :recId];
+            return [SELECT Id,SurveyVersion__r.Body__c,Body__c FROM SurveyResponse__c WHERE Id = :recId];
 
         } catch (Exception e) {
             throw new AuraHandledException(e.getMessage());
