Adopt models in SurveyService

--- a/force-app/main/default/classes/SurveyService.cls
+++ b/force-app/main/default/classes/SurveyService.cls
@@ -1,53 +1,94 @@
 public with sharing class SurveyService {
     
-    // TODO: Implement this method
     public static String createJsonFromRecords(Survey__c survey, List<SurveyVersion__c> versions, List<Page__c> pages, List<Element__c> elements) {
+        SurveyModel surveyModel = SurveyModel.fromRecord(survey);
+        List<SurveyVersionModel> versionModels = new List<SurveyVersionModel>();
+        List<PageModel> pageModels = new List<PageModel>();
+        List<ElementModel> elementModels = new List<ElementModel>();
+        
+        for(SurveyVersion__c version : versions) {
+            versionModels.add(SurveyVersionModel.fromRecord(version));
+        }
+        
+        for(Page__c page : pages) {
+            pageModels.add(PageModel.fromRecord(page));
+        }
+        
+        for(Element__c element : elements) {
+            elementModels.add(ElementModel.fromRecord(element));
+        }
+        
         Map<String, Object> surveyJson = new Map<String, Object>();
+        surveyJson.put('id', surveyModel.id);
+        surveyJson.put('name', surveyModel.name);
+        surveyJson.put('activeVersionId', surveyModel.activeVersionId);
+        
+        List<Map<String, Object>> versionsJson = new List<Map<String, Object>>();
+        for(SurveyVersionModel version : versionModels) {
+            Map<String, Object> versionJson = new Map<String, Object>();
+            versionJson.put('id', version.id);
+            versionJson.put('surveyId', version.surveyId);
+            versionJson.put('versionNumber', version.versionNumber);
+            versionJson.put('status', version.status);
+            versionJson.put('body', version.body);
+            versionJson.put('activatedDate', version.activatedDate);
+            versionsJson.add(versionJson);
+        }
+        surveyJson.put('versions', versionsJson);
+        
         return JSON.serialize(surveyJson);
     }
 
-    public static Id createRecordsFromJson(String jsonInput,SurveyVersion__c surveyVersion, Boolean isUpdate) {
+    public static Id createRecordsFromJson(String jsonInput, SurveyVersion__c surveyVersion, Boolean isUpdate) {
         try {
-
-            // Deserialize the JSON input into a Map
+            // Deserialize the JSON input into a Map for survey data
             Map<String, Object> surveyData = (Map<String, Object>) JSON.deserializeUntyped(jsonInput);
-            Survey__c survey;
+            SurveyModel surveyModel;
             Decimal versionNumber = 0;
             
             if(surveyVersion != null){
-                // Create Survey record
-                survey = new Survey__c(
-                    Id = surveyVersion.Survey__c,
-                    Name = (String)surveyData.get('title')
-                );
-                update survey;
-       
-                versionNumber = isUpdate ? surveyVersion.VersionNumber__c : (surveyVersion.VersionNumber__c + 1);
-            }else{
+                // Get the existing survey
+                Survey__c survey = [SELECT Id, Name FROM Survey__c WHERE Id = :surveyVersion.Survey__c];
+                surveyModel = SurveyModel.fromRecord(survey);
+                
+                // Update survey name if changed
+                if(surveyModel.name != (String)surveyData.get('title')) {
+                    surveyModel.name = (String)surveyData.get('title');
+                    update surveyModel.toRecord();
+                }
+                
+                versionNumber = surveyVersion.VersionNumber__c;
+            } else {
                 versionNumber = 1;
-                // Create Survey record
-                survey = new Survey__c(
-                    Name = (String)surveyData.get('title')
-                );
-                insert survey;
+                // Create new Survey record
+                surveyModel = new SurveyModel();
+                surveyModel.name = (String)surveyData.get('title');
+                insert surveyModel.toRecord();
             }
 
-            SurveyVersion__c version;
+            // Create version record using the model
+            SurveyVersionModel versionModel = new SurveyVersionModel();
+            versionModel.surveyId = surveyModel.id;
+            versionModel.versionNumber = versionNumber;
+            versionModel.body = jsonInput;
+            versionModel.status = isUpdate ? surveyVersion.Status__c : 'Draft';
 
-            // Create SurveyVersion record
-            version = new SurveyVersion__c(
-                Survey__c = survey.Id,
-                VersionNumber__c = versionNumber,
-                Body__c = jsonInput,
-                Name = (String)surveyData.get('title') + ' v' + versionNumber
-            );
-
-            if(isUpdate){
-                version.Id = surveyVersion.Id;
-
-                update version;
-            }else{
-                insert version;
+            if(isUpdate && surveyVersion != null) {
+                // Update existing version
+                versionModel.id = surveyVersion.Id;
+                update versionModel.toRecord();
+            } else {
+                // Create new version
+                insert versionModel.toRecord();
+            }
+            
+            // Delete existing pages and elements if updating
+            if(isUpdate && surveyVersion != null) {
+                List<Page__c> existingPages = [SELECT Id FROM Page__c WHERE SurveyVersion__c = :surveyVersion.Id];
+                if(!existingPages.isEmpty()) {
+                    delete [SELECT Id FROM Element__c WHERE Page__c IN :existingPages];
+                    delete existingPages;
+                }
             }
             
             // Create Page records
@@ -56,12 +97,12 @@ public with sharing class SurveyService {
             if (pagesData != null) {
                 for (Integer i = 0; i < pagesData.size(); i++) {
                     Map<String, Object> pageData = (Map<String, Object>) pagesData[i];
-                    pages.add(new Page__c(
-                        SurveyVersion__c = version.Id,
-                        Name = (String) pageData.get('name'),
-                        Sequence__c = i + 1,
-                        Body__c = JSON.serialize(pageData)
-                    ));
+                    PageModel pageModel = new PageModel();
+                    pageModel.surveyVersionId = versionModel.id;
+                    pageModel.name = (String)pageData.get('name');
+                    pageModel.sequence = i + 1;
+                    pageModel.body = JSON.serialize(pageData);
+                    pages.add(pageModel.toRecord());
                 }
                 insert pages;
             }
@@ -74,12 +115,13 @@ public with sharing class SurveyService {
                 if (elementsData != null) {
                     for (Integer j = 0; j < elementsData.size(); j++) {
                         Map<String, Object> elementData = (Map<String, Object>) elementsData[j];
-                        elements.add(new Element__c(
-                            Page__c = pages[i].Id,
-                            Name = (String) elementData.get('name'),
-                            Sequence__c = j + 1,
-                            Body__c = JSON.serialize(elementData)
-                        ));
+                        ElementModel elementModel = new ElementModel();
+                        elementModel.pageId = pages[i].Id;
+                        elementModel.name = (String)elementData.get('name');
+                        elementModel.sequence = j + 1;
+                        elementModel.body = JSON.serialize(elementData);
+                        elementModel.type = (String)elementData.get('type');
+                        elements.add(elementModel.toRecord());
                     }
                 }
             }
@@ -87,11 +129,11 @@ public with sharing class SurveyService {
                 insert elements;
             }
             
-            System.debug('Survey created successfully. Survey Id: ' + survey.Id);
+            System.debug('Survey saved successfully. Survey Id: ' + surveyModel.id);
             System.debug('Number of pages created: ' + pages.size());
             System.debug('Number of elements created: ' + elements.size());
 
-            return version.Id;
+            return versionModel.id;
         } catch (Exception e) {
             System.debug('Error creating records from JSON: ' + e.getMessage());
             System.debug('Stack trace: ' + e.getStackTraceString());
