change fromRecord to toJson

--- a/force-app/main/default/classes/SurveyVersionModel.cls
+++ b/force-app/main/default/classes/SurveyVersionModel.cls
@@ -1,31 +1,35 @@
 public class SurveyVersionModel {
-    public Id id { get; set; }
-    public Id surveyId { get; set; }
-    public Decimal versionNumber { get; set; }
-    public String status { get; set; }
-    public String body { get; set; }
-    public Datetime activatedDate { get; set; }
-    public List<PageModel> pages { get; set; }
-
-    public static SurveyVersionModel fromRecord(SurveyVersion__c version) {
+    @AuraEnabled public String id { get; set; }
+    @AuraEnabled public String surveyId { get; set; }
+    @AuraEnabled public Decimal versionNumber { get; set; }
+    @AuraEnabled public String status { get; set; }
+    @AuraEnabled public String body { get; set; }
+    @AuraEnabled public Datetime activatedDate { get; set; }
+    @AuraEnabled public String title { get; set; }
+    @AuraEnabled public List<PageModel> pages { get; set; }
+    
+    public static SurveyVersionModel fromRecord(SurveyVersion__c record) {
         SurveyVersionModel model = new SurveyVersionModel();
-        model.id = version.Id;
-        model.surveyId = version.Survey__c;
-        model.versionNumber = version.VersionNumber__c;
-        model.status = version.Status__c;
-        model.body = version.Body__c;
-        model.activatedDate = version.ActivatedDate__c;
+        model.id = record.Id;
+        model.title = record.Name;
+        model.surveyId = record.Survey__c;
+        model.versionNumber = record.VersionNumber__c;
+        model.status = record.Status__c;
+        model.body = record.Body__c;
+        model.activatedDate = record.ActivatedDate__c;
         return model;
     }
 
     public SurveyVersion__c toRecord() {
+        Map<String, Object> surveyJson = (Map<String, Object>)JSON.deserializeUntyped(this.body);
         return new SurveyVersion__c(
             Id = this.id,
             Survey__c = this.surveyId,
             VersionNumber__c = this.versionNumber,
             Status__c = this.status,
             Body__c = this.body,
-            ActivatedDate__c = this.activatedDate
+            ActivatedDate__c = this.activatedDate,
+            Name = this.title
         );
     }
 }
