--- a/force-app/main/default/classes/SurveyModel.cls
+++ b/force-app/main/default/classes/SurveyModel.cls
@@ -1,13 +1,13 @@
 public class SurveyModel {
     public Id id { get; set; }
-    public String name { get; set; }
+    public String title { get; set; }
     public Id activeVersionId { get; set; }
     public List<SurveyVersionModel> versions { get; set; }
 
     public static SurveyModel toJson(Survey__c survey) {
         SurveyModel model = new SurveyModel();
         model.id = survey.Id;
-        model.name = survey.Name;
+        model.title = survey.Name;
         model.activeVersionId = survey.ActiveVersion__c;
         return model;
     }
@@ -15,7 +15,7 @@ public class SurveyModel {
     public Survey__c toRecord() {
         return new Survey__c(
             Id = this.id,
-            Name = this.name,
+            Name = this.title,
             ActiveVersion__c = this.activeVersionId
         );
     }
